# drupal

./: alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
app/: crud.py  main.py  models.py  schemas.py
app/routers/: content.py  users.py
app/tests/: test_content.py  test_users.py
docs/: api.md  architecture.md  configuration.md  database.md  folder-structure.md  functional-spec.md  implementation.md  migration.md  readme.md  ui.md
