[tool.poetry]
name = "drupal-python"
version = "0.1.0"
description = "Python version of Drupal using FastAPI, Pydantic, and SQLAlchemy"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
pydantic = "^1.8.2"
sqlalchemy = "^1.4.22"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"
test = "pytest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
